[package]
name = "etherip-zdp-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
etherip-zdp-common = { path = "../etherip-zdp-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "etherip-zdp"
path = "src/main.rs"
